# Qt_Projects

./: .gitignore  README.md
ArduinoType/: ArduinoType.pro  main.cpp
BMS/: Bankie_.pro  bank.qrc  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  sign_in.cpp  sign_in.h  sign_in.ui
Clock/: Clock.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
CriminalManagementSystem/: CriminalManagementSystem.pro  assets.qrc  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  record.cpp  record.h  record.ui  register.cpp  register.h  register.ui  sqlitehandler.cpp  sqlitehandler.h
CriminalManagementSystem/assets/: CMakeLists.txt
FelgoApps/PropertyCross/: PropertyCross.pro
FelgoApps/PropertyCross/qml/: PropertyCrossMain.qml  PropertyCrossMainItem.qml  config.json
FelgoApps/PropertyCross/qml/model/: Client.qml  DataModel.qml  DataModel.qml.autosave  Logic.qml
FelgoApps/PropertyCross/qml/pages/: PropertyCrossMainPage.qml  SearchPage.qml
FelgoApps/colorPicker/: colorPicker.pro
FelgoApps/colorPicker/android/: AndroidManifest.xml
FelgoApps/colorPicker/android/res/values/: strings.xml
FelgoApps/colorPicker/ios/: Project-Info.plist
FelgoApps/colorPicker/qml/: Cell.qml  Main.qml  config.json
FelgoApps/part7/: part7.pro
FelgoApps/part7/android/: AndroidManifest.xml
FelgoApps/part7/qml/: Main.qml  config.json
KDABQuick/Tutorial/: Tutorial.qmlproject  assets.qrc  ex-expression.qml  exercise1.qml  image.qml  item2.qml
Koiwa/: Koiwa.pro  README.md  db_connection.cpp  db_connection.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtESPWeb/: QtESPWeb.pro
QtWeb/: LoadProgressStyle.qml  QtWeb.pro  main.qml  qml.qrc
QtWebView/: QtWebView.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-Clock-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Clock  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-Clock-Desktop_Qt_5_15_2_GCC_64bit-Release/: Clock  Makefile
calculator/: README.md  calculator.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
chatApplication/: CMakeLists.txt  chatApplication_en_KE.ts  main.cpp  main.qml  tcpserver.cpp  tcpserver.h
mongoConnect/: mainwindow.cpp  mainwindow.h  mongoConnect.pro
qmlTutorial/: Cell.qml  state.qml
